date_from_csv_files

--- a/DRF/templates/home.html
+++ b/DRF/templates/home.html
@@ -13,6 +13,7 @@
         <a href="/api-auth/all" >ALL USER</a><br><br><br><br>
         <a href="/api-auth/currentUser" >AUTH LOGIN</a><br><br><br><br>
         <a href="/adimin" >FOR ALL SOCIAL LOGINS AND SOCIAL AUTH</a><br><br><br><br>
+        <a href="/csv/" >ALL DATES FROM CSV FILE</a><br><br><br><br>
     </div>
 </div>
 {% endblock %}
